...
      token: token,
    });
  };

  const styles = useThemedStyles(styleSheet);
  return (
    <PageBackground accessibilityLabel="login page" style={styles.pageBg}>
      <MemoedTextInput
        label="your access token"
        setText={setToken}
        disabled={loading}
        defaultValue={props.userCredentials.token}
        error={props.loginError}
...
        disabled={loginBtnDisabled}
        accessibilityLabel="login"
        style={styles.loginButton}>
        Login
      </Button>
      <Button
        accessibilityLabel="to registration"
        onPress={() => props.onToRegistration({handle: handle, token: token})}
        icon="account-plus"
        mode="outlined"
        color={styles.toRegistrationBtn.color}
        contentStyle={styles.toRegistrationBtn.contentStyle}
        compact
...
